Improve support for POST data.